# modern-cmake-sample

./: CMakeLists.txt  README.md  conanfile.txt
app/: CMakeLists.txt  main.cpp
include/opengl-utils/: Shader.hpp
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
res/shaders/: fColorCycleShader.fs  vColorCycleShader.vs
src/: Shader.cpp
